WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
78705
Web Inspector: crash when inspecting an element on a page with eval disabled by CSP
https://bugs.webkit.org/show_bug.cgi?id=78705
Summary
Web Inspector: crash when inspecting an element on a page with eval disabled ...
Yury Semikhatsky
Reported
2012-02-15 05:36:10 PST
Original Chromium report:
http://code.google.com/p/chromium/issues/detail?id=113895
Attachments
Patch
(8.37 KB, patch)
2012-02-15 05:43 PST
,
Yury Semikhatsky
pfeldman
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yury Semikhatsky
Comment 1
2012-02-15 05:43:47 PST
Created
attachment 127168
[details]
Patch
Yury Semikhatsky
Comment 2
2012-02-15 05:56:13 PST
Committed
r107806
: <
http://trac.webkit.org/changeset/107806
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug