Web Inspector: crash when inspecting an element on a page with eval disabled by CSP https://bugs.webkit.org/show_bug.cgi?id=78705

Source/WebCore:

Inspector functions in injected script may use eval so we need to make sure
it is allowed for inspector code on pages where it is prohibited by CSP.

Reviewed by Pavel Feldman.

Test: inspector/elements/resolve-node-blocked.html

* inspector/InjectedScript.cpp:
(WebCore::InjectedScript::nodeForObjectId):
(WebCore::InjectedScript::wrapCallFrames):
(WebCore::InjectedScript::wrapObject):
(WebCore::InjectedScript::releaseObjectGroup):
(WebCore::InjectedScript::callFunctionWithEvalEnabled):
(WebCore):
(WebCore::InjectedScript::makeCall):
* inspector/InjectedScript.h:
(InjectedScript):

LayoutTests:

Reviewed by Pavel Feldman.

* inspector/elements/resolve-node-blocked-expected.txt: Added.
* inspector/elements/resolve-node-blocked.html: Added.

Canonical link: https://commits.webkit.org/95648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107806 268f45cc-cd09-0410-ab3c-d52691b4dbfc